--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -40,9 +40,9 @@
   overflow: hidden;
 }
 
-.scroll-lock {
-  overflow: hidden;
-}
+// .scroll-lock {
+//   overflow: hidden;
+// }
 
 .no-scrollbar {
   -ms-overflow-style: none;
