--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,6 +18,10 @@
 // Blocks
 // ---------------------------------
 
+@import "blocks/header.scss";
+@import "blocks/nav.scss";
+@import "blocks/toggle.scss";
+@import "blocks/social.scss";
 @import "blocks/btn";
 @import "blocks/modal";
 @import "blocks/custom-input";
