--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,6 +11,10 @@ $color-light-sky-blue:              #92ccfe;
 $color-paris-daisy:                 #ffe249;
 $color-brilliat-rose:               #f668a2;
 
+// Overlay
+
+$overlay-dark:                      rgba($color-default-black, 0.2);
+
 // Typography
 // ---------------------------------
 
@@ -31,9 +35,10 @@ $trans-600:                         0.6s $tf-default;
 // ---------------------------------
 
 $vp-320:                            320px;
+$vp-480:                            480px;
 $vp-768:                            768px;
-$vp-1200:                           1200px;
-$vp-1439:                           1439px;
+$vp-1000:                           1000px;
+$vp-1440:                           1440px;
 
 // Retina
 // ---------------------------------
