feat: добавляет подвал

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,6 +22,9 @@
 @import "blocks/nav.scss";
 @import "blocks/toggle.scss";
 @import "blocks/social.scss";
+@import "blocks/footer.scss";
+@import "blocks/footerNav.scss";
+@import "blocks/subscription.scss";
 @import "blocks/btn";
 @import "blocks/modal";
 @import "blocks/custom-input";
