--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -10,6 +10,7 @@ $color-tickle-me-pink:              #ee75ab;
 $color-light-sky-blue:              #92ccfe;
 $color-paris-daisy:                 #ffe249;
 $color-brilliat-rose:               #f668a2;
+$color-arapawa:                     #2d465d;
 
 // Overlay
 
