--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -99,6 +99,7 @@
   padding: 16px 32px;
 
   font-size: 18px;
+  color: $color-default-black;
 
   cursor: pointer;
   user-select: none;
@@ -128,6 +129,14 @@
     transform: scale(1.05);
     border-color: $color-brilliat-rose;
     color: $color-brilliat-rose;
+  }
+}
+
+.header__social {
+  display: none;
+
+  @include vp-767 {
+    display: flex;
   }
 }
 
