--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -31,7 +31,7 @@ html {
 body {
   width: 100%;
   height: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   margin: 0;
@@ -41,6 +41,10 @@ body {
   font-size: 16px;
   text-align: left;
   color: $color-default-black;
+}
+
+footer {
+  margin-top: auto;
 }
 
 a {
