--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -35,8 +35,9 @@
     min-height: 98px;
     justify-content: space-between;
     z-index: 1;
-    margin: 0 auto;
     width: 100%;
+    min-width: 320px;
+    max-width: 100%;
   }
 }
 
