--- a/source/sass/blocks/toggle.scss
+++ b/source/sass/blocks/toggle.scss
@@ -4,7 +4,7 @@
   @include vp-767 {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    justify-content: flex-end;
     outline: none;
     cursor: pointer;
     border: none;
@@ -24,7 +24,7 @@
 .toggle__opened,
 .toggle__closed {
   @include vp-479 {
-    width: 90%;
+    width: 65%;
   }
 }
 
