--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,6 +26,7 @@
 @import "blocks/footerNav.scss";
 @import "blocks/subscription.scss";
 @import "blocks/hero.scss";
+@import "blocks/about.scss";
 @import "blocks/btn";
 @import "blocks/modal";
 @import "blocks/custom-input";
