--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,6 +27,8 @@
 @import "blocks/subscription.scss";
 @import "blocks/hero.scss";
 @import "blocks/about.scss";
+@import "blocks/teachers.scss";
+@import "blocks/teacher.scss";
 @import "blocks/btn";
 @import "blocks/modal";
 @import "blocks/custom-input";
