--- a/source/sass/blocks/teachers.scss
+++ b/source/sass/blocks/teachers.scss
@@ -14,7 +14,7 @@
     width: 100%;
     overflow: hidden;
     background-color: $color-paris-daisy;
-    background-image: url("./../../img/dots/background-dot-black.png");
+    background-image: url("./../img/dots/background-dot-black.png");
     background-size: 100%;
     border-top: 4px solid $color-default-black;
 
@@ -31,7 +31,7 @@
     width: 100%;
     overflow: hidden;
     background-color: $color-paris-daisy;
-    background-image: url("./../../img/dots/background-dot-black.png");
+    background-image: url("./../img/dots/background-dot-black.png");
     background-size: 100%;
     border-bottom: 4px solid $color-default-black;
 
