--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,6 +29,7 @@
 @import "blocks/about.scss";
 @import "blocks/teachers.scss";
 @import "blocks/teacher.scss";
+@import "blocks/price.scss";
 @import "blocks/btn";
 @import "blocks/modal";
 @import "blocks/custom-input";
