feat: добавляет Отзывы

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -152,7 +152,7 @@
   top: 100px;
   right: 0;
   z-index: 1;
-  background-image: url("../img/background-dot-black.webp");
+  background-image: url("./../img/dots/background-dot-black.webp");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
