--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -10,7 +10,7 @@
     max-width: 1440px;
     margin: 0 auto;
     object-fit: fill;
-    padding: 10px 0;
+    // padding: 10px 0;
   }
 
   @media (min-width: 320px) and (max-width: 1500px) {
