--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,6 +30,7 @@
 @import "blocks/teachers.scss";
 @import "blocks/teacher.scss";
 @import "blocks/price.scss";
+@import "blocks/feedback.scss";
 @import "blocks/btn";
 @import "blocks/modal";
 @import "blocks/custom-input";
