--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -4,8 +4,12 @@
   min-width: 320px;
   max-width: 1440px;
 
+  position: sticky;
+  top: 0;
+  transition: 1s;
+  z-index: 999999;
+
   @include vp-767 {
-    position: relative;
     border-bottom: 2px solid $color-default-black;
   }
 }
