--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -108,6 +108,18 @@
   }
 }
 
+.footer__paschalka {
+  color: $color-default-black;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    color: $color-brilliat-rose;
+  }
+}
+
 .footer__link {
   display: flex;
   flex-direction: column;
