--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -99,11 +99,29 @@
   }
 }
 
+.feedback__feedbacks {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.feedback__group {
+  height: fit-content;
+
+  @include vp-1439 {
+    display: none;
+  }
+}
+
 .feedback__swiper {
-  overflow: auto;
+  overflow: hidden;
   max-width: 500px;
+  height: fit-content;
   margin: 0 auto;
   position: relative;
+  padding: 0 50px;
 
   @include vp-999 {
     max-width: 600px;
@@ -126,6 +144,7 @@
 }
 
 .feedback__list {
+  overflow: visible;
   margin: 0;
   padding: 0;
   list-style: none;
