--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -25,6 +25,7 @@
   margin: 0 auto;
 
   position: relative;
+  background-color: $color-default-white;
 
   @include vp-1439 {
     padding: 0 80px;
