--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,6 +38,9 @@
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
 @import "blocks/first-lesson";
+@import "blocks/free-lesson";
+@import "blocks/control.scss";
+@import "blocks/messengers.scss";
 
 // ---------------------------------
 
