fix: добавляет стили для intro

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 // Global
 // ---------------------------------
 
+@import "global/intro";
 @import "variables";
 @import "mixins";
 @import "global/fonts";
