--- a/source/sass/blocks/messengers.scss
+++ b/source/sass/blocks/messengers.scss
@@ -16,18 +16,18 @@
     flex-direction: column;
     row-gap: 10px;
   }
+}
 
-  h3 {
-    font-size: 16px;
-    line-height: 22px;
-    font-weight: 400;
-    margin: 0;
+.messengers__title {
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 400;
+  margin: 0;
 
-    @include vp-767 {
-      font-size: 17px;
-      line-height: 27px;
-      text-align: center;
-    }
+  @include vp-767 {
+    font-size: 17px;
+    line-height: 27px;
+    text-align: center;
   }
 }
 
