--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -101,6 +101,7 @@
   line-height: normal;
   border: 1px solid $color-arapawa;
   background-color: $color-light-sky-blue;
+  cursor: pointer;
 
   padding: 10px 0;
   max-width: 121px;
