fix: вносит правки по test

--- a/source/sass/blocks/first-lesson.scss
+++ b/source/sass/blocks/first-lesson.scss
@@ -27,7 +27,7 @@
   padding: 40px;
   margin: 229px 0 0 -78px;
   border: 2px solid $color-default-black;
-  box-shadow: 4px 4px 0px 0px $color-default-black;
+  box-shadow: 4px 4px 0 0 $color-default-black;
   align-self: flex-end;
 
   p {
