--- a/source/sass/blocks/teacher.scss
+++ b/source/sass/blocks/teacher.scss
@@ -7,7 +7,7 @@
   border: 2px solid $color-default-black;
   border-radius: 20px;
   background: $color-default-white;
-  box-shadow: 4px 4px 0px 0px $color-default-black;
+  box-shadow: 4px 4px 0 0 $color-default-black;
 
   img {
     max-height: 522px;
