--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -80,13 +80,13 @@
     top: -53px;
     z-index: 1;
 
-    box-shadow: 4px 4px 0px 0px #000;
+    box-shadow: 4px 4px 0 0 $color-default-black;
   }
 
   &--1 {
-    border: 2px solid #000;
-    background: linear-gradient(0deg, #EE75AB 0%, #EE75AB 100%), #FFF;
-    box-shadow: 4px 4px 0px 0px #000;
+    border: 2px solid $color-default-black;
+    background: linear-gradient(0deg, $color-tickle-me-pink 0%, $color-tickle-me-pink 100%), $color-default-white;
+    box-shadow: 4px 4px 0 0 $color-default-black;
 
     margin: 129px 0 0;
 
@@ -96,9 +96,9 @@
   }
 
   &--2 {
-    border: 2px solid #000;
-    background: linear-gradient(0deg, #92CCFE 0%, #92CCFE 100%), #FFF;
-    box-shadow: 4px 4px 0px 0px #000;
+    border: 2px solid $color-default-black;
+    background: linear-gradient(0deg, $color-light-sky-blue 0%, $color-light-sky-blue 100%), $color-default-white;
+    box-shadow: 4px 4px 0 0 $color-default-black;
 
     margin: 41px 0 0;
     padding: 210px 19px 48px;
@@ -109,17 +109,17 @@
   }
 
   &--3 {
-    border: 2px solid #000;
-    background: linear-gradient(0deg, #FFE249 0%, #FFE249 100%), #FFF;
-    box-shadow: 4px 4px 0px 0px #000;
+    border: 2px solid $color-default-black;
+    background: linear-gradient(0deg, $color-paris-daisy 0%, $color-paris-daisy 100%), $color-default-white;
+    box-shadow: 4px 4px 0 0 $color-default-black;
 
     margin: -128px 0 0;
   }
 
   &--4 {
-    border: 2px solid #000;
-    background: linear-gradient(0deg, #92CCFE 0%, #92CCFE 100%), #FFF;
-    box-shadow: 4px 4px 0px 0px #000;
+    border: 2px solid $color-default-black;
+    background: linear-gradient(0deg, $color-light-sky-blue 0%, $color-light-sky-blue 100%), $color-default-white;
+    box-shadow: 4px 4px 0 0 $color-default-black;
 
     margin: 8px 0 0 84px;
     padding: 245px 17px 49px;
@@ -130,14 +130,14 @@
   }
 
   &--5 {
-    border: 2px solid #000;
-    background: linear-gradient(0deg, #F668A2 0%, #F668A2 100%), #FFF;
-    box-shadow: 4px 4px 0px 0px #000;
+    border: 2px solid $color-default-black;
+    background: linear-gradient(0deg, $color-brilliat-rose 0%, $color-brilliat-rose 100%), $color-default-white;
+    box-shadow: 4px 4px 0 0 $color-default-black;
 
     margin: -100px 0 0;
 
     img {
-      top: -95px
+      top: -95px;
     }
   }
 
@@ -155,7 +155,7 @@
 
     &--1 {
       margin: 150px 0 0;
-      background: linear-gradient(0deg, #92CCFE 0%, #92CCFE 100%), #FFF;
+      background: linear-gradient(0deg, $color-light-sky-blue 0%, $color-light-sky-blue 100%), $color-default-white;
       order: 1;
     }
 
@@ -164,18 +164,18 @@
     }
 
     &--3 {
-      background: linear-gradient(0deg, #FFE249 0%, #FFE249 100%), #FFF;
+      background: linear-gradient(0deg, $color-paris-daisy 0%, $color-paris-daisy 100%), $color-default-white;
       order: 2;
     }
 
     &--4 {
       margin: -100px 0 0;
-      background: linear-gradient(0deg, #F668A2 0%, #F668A2 100%), #FFF;
+      background: linear-gradient(0deg, $color-brilliat-rose 0%, $color-brilliat-rose 100%), $color-default-white;
       order: 4;
     }
 
     &--5 {
-      background: linear-gradient(0deg, #FFE249 0%, #FFE249 100%), #FFF;
+      background: linear-gradient(0deg, $color-paris-daisy 0%, $color-paris-daisy 100%), $color-default-white;
       margin: 80px 0 0;
       order: 3;
     }
