--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -18,7 +18,6 @@
   }
 
   @include vp-1439 {
-
     img {
       min-height: 805px;
     }
@@ -50,7 +49,7 @@
     font-weight: 400;
     line-height: normal;
     white-space: pre-line;
-    transform: rotate(-1.605deg);
+    transform: rotate(-1.6deg);
     padding: 0;
     margin: 0;
   }
@@ -66,7 +65,7 @@
     line-height: normal;
     -webkit-text-stroke: 3px $color-default-black;
     -webkit-text-fill-color: $color-neon-pink;
-    transform: rotate(-1.605deg);
+    transform: rotate(-1.6deg);
 
     margin: 0;
     padding: 0 0 0 40px;
@@ -79,7 +78,7 @@
     line-height: normal;
     text-align: center;
     white-space: pre-line;
-    transform: rotate(-1.605deg);
+    transform: rotate(-1.6deg);
     padding: 0;
     margin: 11px 0 0 -6px;
   }
@@ -170,18 +169,17 @@
 
   background-color: $color-paris-daisy;
   border: 2px solid $color-default-black;
-  box-shadow: 4px 4px 0px 0px $color-default-black;
-  transform: rotate(-1.977deg);
+  box-shadow: 4px 4px 0 0 $color-default-black;
+  transform: rotate(-1.98deg);
   padding: 14px 42px;
   justify-content: center;
   align-items: flex-start;
-
   cursor: pointer;
 
   &:hover,
   &:focus {
     border: 2px solid $color-brilliat-rose;
-    box-shadow: 4px 4px 0px 0px $color-brilliat-rose;
+    box-shadow: 4px 4px 0 0 $color-brilliat-rose;
     color: $color-brilliat-rose;
   }
 
@@ -196,7 +194,7 @@
 
     font-size: 25px;
     line-height: 35px;
-    transform: rotate(-3.054deg);
+    transform: rotate(-3.05deg);
     padding: 11px 8px;
   }
 
@@ -206,7 +204,7 @@
 
     font-size: 24px;
 
-    transform: rotate(-0.663deg);
+    transform: rotate(-0.66deg);
     padding: 8px 12px;
   }
 
