--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -89,7 +89,7 @@
   &--1 {
     background-color: $color-light-sky-blue;
     border: 2px solid $color-default-black;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 
     &::after {
       position: absolute;
@@ -123,7 +123,7 @@
   &--2 {
     background-color: $color-paris-daisy;
     border: 2px solid $color-default-black;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 
     &::after {
       position: absolute;
@@ -158,7 +158,7 @@
   &--3 {
     background-color: $color-brilliat-rose;
     border: 2px solid $color-default-black;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 
     &::after {
       position: absolute;
