--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,6 +5,7 @@
 
 $color-default-black:               #000000;
 $color-default-white:               #ffffff;
+$color-default-error:               #f60606;
 $color-transparent:                 rgba(255, 255, 255, 0);
 $color-tickle-me-pink:              #ee75ab;
 $color-light-sky-blue:              #92ccfe;
