--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -40,6 +40,7 @@
 .subscription__form form {
   display: flex;
   flex-direction: row;
+  position: relative;
 
   @include vp-767 {
     margin: 0 0 0 -5px;
@@ -57,6 +58,46 @@
 .subscription__email {
   display: flex;
   flex-direction: row;
+
+  &__error {
+    position: absolute;
+    right: 0;
+    bottom: 35px;
+
+    color: $color-default-error;
+
+    opacity: 0;
+
+    transition: opacity 0.3s ease;
+
+    @media screen and (max-width: 767px) {
+      bottom: 20px;
+    }
+  }
+
+  &.is-invalid {
+    input,
+    textarea {
+      border: 2px solid $color-default-error;
+
+      &:focus,
+      &:hover {
+        border: 2px solid rgba($color-default-error, 0.5);
+      }
+    }
+  }
+
+  .input-message {
+    position: absolute;
+    left: 10px;
+    bottom: -20px;
+
+    &.is-invalid {
+      color: $color-default-error;
+      font-size: 10px;
+      line-height: normal;
+    }
+  }
 
   input {
     border: 1px solid $color-arapawa;
