fix: правки переполнения

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -27,7 +27,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin: 0 0 0 200px;
+  margin: 0 0 20px 200px;
 
   @include vp-1439 {
     margin: 0 0 0 150px;
