--- a/source/sass/blocks/messengers.scss
+++ b/source/sass/blocks/messengers.scss
@@ -37,6 +37,6 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   column-gap: 12px;
 }
