--- a/source/sass/blocks/teachers.scss
+++ b/source/sass/blocks/teachers.scss
@@ -2,7 +2,7 @@
   background-color: $color-paris-daisy;
   position: relative;
 
-  margin-bottom: 100px; //временное свойство
+  margin-bottom: 100px;
 
   &::before {
     position: absolute;
