--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -2,9 +2,11 @@
   width: 100%;
   background-color: $color-default-white;
 
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
   z-index: 2;
+  width: 100%;
 }
 
 .header__wrapper {
@@ -37,20 +39,21 @@
 
 .header__sticky-wrap {
   padding: 0;
-  min-width: unset;
   max-width: 136px;
   justify-content: space-between;
   width: 100%;
 
   @include vp-767 {
     min-width: 320px;
-    max-width: 100%;
+    max-width: unset;
     min-height: 98px;
     display: flex;
     background-color: $color-default-white;
     padding: 10px 20px;
     border-bottom: 2px solid $color-default-black;
-    z-index: 9999999999;
+    position: fixed;
+    top: 0;
+    z-index: 999999999;
   }
 }
 
@@ -85,6 +88,8 @@
 
   @include vp-767 {
     display: none;
+    visibility: hidden;
+    transition: visibility 0.3s ease;
 
     flex-direction: column;
     margin: 0;
@@ -119,7 +124,6 @@
 
     padding: 14px 42px;
     margin-bottom: 35px;
-    z-index: 9999999999;
   }
 
   @include vp-479 {
@@ -147,6 +151,7 @@
 .header__subwrapper.is-opened {
   display: flex;
   overflow-y: auto;
+  visibility: visible;
   height: 600px;
   max-height: 100%;
   position: fixed;
