--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -7,6 +7,18 @@
   left: 0;
   z-index: 2;
   width: 100%;
+
+  &.is-opened {
+    &::before {
+      content: "";
+      position: fixed;
+      z-index: 1;
+      background-color: $overlay-dark;
+      opacity: 1;
+      inset: 0;
+      transform: scale(1);
+    }
+  }
 }
 
 .header__wrapper {
@@ -51,8 +63,8 @@
     background-color: $color-default-white;
     padding: 10px 20px;
     border-bottom: 2px solid $color-default-black;
-    position: fixed;
-    top: 0;
+    // position: fixed;
+    // top: 0;
     z-index: 999999999;
   }
 }
@@ -65,7 +77,7 @@
 
   @include vp-767 {
     margin: -34px 0 0 -20px;
-    z-index: 9999999999;
+    // z-index: 9999999999;
   }
 
   &:hover,
@@ -87,20 +99,35 @@
   }
 
   @include vp-767 {
-    display: none;
-    visibility: hidden;
-    transition: visibility 0.3s ease;
-
+    display: flex;
     flex-direction: column;
     margin: 0;
+    padding: 163px 45px 18px 34px;
 
     max-width: 382px;
-    max-height: 572px;
-    flex-shrink: 0;
-  }
+    height: 600px;
 
-  @include vp-479 {
-    max-height: 500px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+
+    background-image: url("./../img/dots/background-dot-black.webp");
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+
+    border-top: 2px solid $color-default-black;
+    border-right: 4px solid $color-default-black;
+    border-bottom: 6px solid $color-default-black;
+    border-left: 2px solid $color-default-black;
+
+    overflow-y: auto;
+    visibility: hidden;
+
+    &.is-opened {
+      visibility: visible;
+    }
   }
 }
 
@@ -145,40 +172,5 @@
 
   @include vp-767 {
     display: flex;
-  }
-}
-
-.header__subwrapper.is-opened {
-  display: flex;
-  overflow-y: auto;
-  visibility: visible;
-  height: 600px;
-  max-height: 100%;
-  position: fixed;
-  top: 0;
-  right: 0;
-  z-index: 1;
-  background-image: url("./../img/dots/background-dot-black.webp");
-  background-size: cover;
-  background-position: top;
-  background-repeat: no-repeat;
-
-  padding: 163px 45px 18px 34px;
-
-  border-top: 2px solid $color-default-black;
-  border-right: 4px solid $color-default-black;
-  border-bottom: 6px solid $color-default-black;
-  border-left: 2px solid $color-default-black;
-}
-
-.header.is-opened {
-  &::before {
-    content: "";
-    position: fixed;
-    z-index: 1;
-    background-color: $overlay-dark;
-    opacity: 1;
-    inset: 0;
-    transform: scale(1);
   }
 }
